src/objects/XeroEntity__c.object
<CustomObject>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XeroId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Xero Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XeroName__c</fullName>
        <label>Xero Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XeroSettings__c</fullName>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Xero Entities</relationshipLabel>
        <relationshipName>XeroEntities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Xero Entity</label>
    <nameField>
        <displayFormat>XE-{0000}</displayFormat>
        <label>Xero Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>